# python-console-app

./: .gitignore  README.md  pyproject.toml
my_python_app/: __init__.py  main.py  util.py
tests/: test_my_python_app.py
