[tool.poetry]
name = "my-python-app"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
pytest = "*"
black = {version = "^21.10b0", allow-prereleases = true}

[tool.poetry.scripts]
mypythonapp = "my_python_app.main:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
